# vtkKinship

./: CMakeLists.txt  Doxyfile  README
Documentation/: CMakeLists.txt  Doxyfile  Makefile  SplineDrivenImageSlicer.tex  references.bib
Documentation/Resources/: closed_curve.vtp
Documentation/VTKJournalPaper/: ExplicitDeformableModel.tex  Makefile  references.bib
Examples/: CMakeLists.txt  DeformableMesh.cxx  DualPolyDataFilter.cxx  IterativeWarp.cxx  PolyDataToBinaryImage.cxx  ProbeToImageData.cxx  SplineDrivenImageReslice.cxx  SplineDrivenImageSlicer.cxx  StraightenedCurvedPlanarReformation.cxx
Filters/: CMakeLists.txt  vtkChainSource.cxx  vtkChainSource.h  vtkDeformableMesh.cxx  vtkDeformableMesh.h  vtkDualPolyDataFilter.cxx  vtkDualPolyDataFilter.h  vtkFrenetSerretFrame.cxx  vtkFrenetSerretFrame.h  vtkHistoryManager.cxx  vtkHistoryManager.h  vtkICPPolyDataFilter.cxx  vtkICPPolyDataFilter.h  vtkImageConvolution.cxx  vtkImageConvolution.h  vtkImageCropVOI.cxx  vtkImageCropVOI.h  vtkImageEigenElements.cxx  vtkImageEigenElements.h  vtkImageLocalConvolution.cxx  vtkImageLocalConvolution.h  vtkImageMomentKernelSource.cxx  vtkImageMomentKernelSource.h  vtkIterativePolyDataAlgorithm.cxx  vtkIterativePolyDataAlgorithm.h  vtkOFFReader.cxx  vtkOFFReader.h  vtkPolyDataIterativeWarp.cxx  vtkPolyDataIterativeWarp.h  vtkPolyDataNeighbourhood.cxx  vtkPolyDataNeighbourhood.h  vtkPolyDataSurfaceOfRevolution.cxx  vtkPolyDataSurfaceOfRevolution.h  vtkPolyDataToBinaryImage.cxx  vtkPolyDataToBinaryImage.h  vtkRegularizedDeformableMesh.cxx  vtkRegularizedDeformableMesh.h  vtkRubOffDataSetFilter.cxx  vtkRubOffDataSetFilter.h  vtkSmoothPolyDataVectors.cxx  (+15 more)
Plugins/: CMakeLists.txt  ConvolutionFilters.xml  DeformableMesh.xml  ExplicitDeformableModelMenu.xml  FrenetSerretFrame.xml  ICPPolyDataFilter.xml  ImageConvolution.xml  ImageCropVOI.xml  ImageEigenElements.xml  ImageLocalConvolution.xml  ImageMomentKernelSource.xml  OFFReader.xml  OFFReaderGUI.xml  PolyDataIterativeWarp.xml  PolyDataToBinaryImage.xml  RegularizedDeformableMesh.xml  RubOffDataSetFilter.xml  SmoothPolyDataVectors.xml  SplineDrivenImageReslice.xml  SplineDrivenImageSlicer.xml  ThickTubeFilter.xml  UVSphereSource.xml  vtkKinshipFilterMenu.xml
Tests/: CMakeLists.txt  testConvolutions.cxx~  testDeformableMesh.cxx  testFrenetSerretFrame.cxx  testICPPolyDataFilter.cxx  testImageConvolution.cxx  testOFFReader.cxx  testPolyDataNeighbourhood.cxx  testSplineDriveImageSlicer.cxx  testStraightenedCurvedPlanarReformation.cxx
Utils/yaap/: README  yaap.h
